# wardrobe

./: .gitignore  README.md  pyproject.toml
src/: app_main.py  calc_score_logic.py  combinations_logic.py  data_from_user.py  logic.py  wall.py  wardrobe.py  wardrobe_params.py
src/tests/: logic_tests.py
