[tool.poetry]
name = "wardrobe"
version = "0.1.0"
description = ""
authors = ["yellowBunny <zigggin3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"


[tool.poetry.group.dev.dependencies]
black = "22.8.0"
pytest = "7.1.2"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
